[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/beehive.png" type="Texture" id=1]
[ext_resource path="res://Hive.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="Hive" type="StaticBody2D"]
input_pickable = true
collision_layer = 16
collision_mask = 33
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.937255, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Player Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detector"]
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_Hive_input_event"]
[connection signal="body_entered" from="Player Detector" to="." method="_on_Player_Detector_body_entered"]
[connection signal="body_exited" from="Player Detector" to="." method="_on_Player_Detector_body_exited"]
